# vis-short-2019_1027

./: .gitmodules  CMakeLists.txt  README.md  draw.cpp  draw.h  gd.cu  gd.h  graph.cpp  graph.h  image.cpp  image.h  lbvh.cu  lbvh.h  main.cpp  optixSpringEmbedder.cu  optixSpringEmbedder.h
benchmarks/: benchmarkParser.py  config.py  generateTable.py  lbvh.pnm  parseResults.py  runBenchmarks.py  teaserFiles.sh
data/gephi/: gephi_13k.csv  gephi_2k.csv  gephi_35k.csv  mini.csv
evaluation/: plots.Rmd  teaserGenerationTulip.py
results/: Artificial1_lbvh.csv  Artificial1_lbvh.json  Artificial1_lbvh.out  Artificial1_naive.csv  Artificial1_naive.json  Artificial1_naive.out  Deezer-HR_lbvh.csv  Deezer-HR_lbvh.json  Deezer-HR_lbvh.out  Deezer-HR_naive.csv  Deezer-HR_naive.json  Deezer-HR_naive.out  Deezer-HU_lbvh.csv  Deezer-HU_lbvh.json  Deezer-HU_lbvh.out  Deezer-HU_naive.csv  Deezer-HU_naive.json  Deezer-HU_naive.out  Deezer-R0_lbvh.csv  Deezer-R0_lbvh.json  Deezer-R0_lbvh.out  Deezer-R0_naive.csv  Deezer-R0_naive.json  Deezer-R0_naive.out  Deezer-R0_rtx.csv  Deezer-R0_rtx.json  Deezer-R0_rtx.out  gephi-100k_lbvh.csv  gephi-100k_lbvh.json  gephi-100k_lbvh.out  gephi-100k_naive.csv  gephi-100k_naive.json  gephi-100k_naive.out  gephi-100k_rtx.csv  gephi-100k_rtx.json  gephi-100k_rtx.out  k-5-10-connected_lbvh.csv  k-5-10-connected_lbvh.json  k-5-10-connected_lbvh.out  k-5-10-connected_naive.csv  (+131 more)
tlp/: cmds.sh  tulip_k5_10.py  tulip_k5_10_connected.py  tulip_tree16.py
